fix: save partial assistant reply on SSE disconnect, add file filter to commit diff